fix: style and spacing

--- a/ssg/sass/style.scss
+++ b/ssg/sass/style.scss
@@ -105,5 +105,6 @@ $accent-dark: rgba(32, 32, 32, 0.8);
 
 article > p:first-of-type::first-line {
   font-variant: small-caps;
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: larger;
 }
